Added validation message, fixed styling on form error

--- a/captcha_keypad.css
+++ b/captcha_keypad.css
@@ -13,7 +13,7 @@
     border: 1px dotted gray;
     width: 10px;
     height: 10px;
-    display: inline;
+    display: inline-table;
     margin: 2px 2px;
     padding: 2px 6px;
 }
@@ -27,4 +27,5 @@
     display: block;
     width: 110px;
     border: none;
+    height: auto;
 }
