--- a/captcha_keypad.css
+++ b/captcha_keypad.css
@@ -1,5 +1,5 @@
-#edit-captcha-keypad .fieldset-wrapper .form-item,
-#edit-captcha-keypad .fieldset-wrapper .captcha-keypad {
+.captcha-keypad-wrapper .fieldset-wrapper .form-item,
+.captcha-keypad-wrapper .fieldset-wrapper .captcha-keypad {
     float: left;
     display: block;
     margin: 5px;
@@ -7,8 +7,8 @@
     vertical-align: middle;
 }
 
-#edit-captcha-keypad .fieldset-wrapper .captcha-keypad span,
-#edit-captcha-keypad .fieldset-wrapper .clear {
+.captcha-keypad-wrapper .fieldset-wrapper .captcha-keypad span,
+.captcha-keypad-wrapper .fieldset-wrapper .clear {
     cursor: pointer;
     border: 1px dotted gray;
     width: 10px;
@@ -18,12 +18,12 @@
     padding: 2px 6px;
 }
 
-#edit-captcha-keypad .fieldset-wrapper .captcha-keypad .inner span:hover,
-#edit-captcha-keypad .fieldset-wrapper .clear:hover {
+.captcha-keypad-wrapper .fieldset-wrapper .captcha-keypad .inner span:hover,
+.captcha-keypad-wrapper .fieldset-wrapper .clear:hover {
     background-color: rgb(207, 208, 208);
 }
 
-#edit-captcha-keypad .fieldset-wrapper .captcha-keypad .inner {
+.captcha-keypad-wrapper .fieldset-wrapper .captcha-keypad .inner {
     display: block;
     width: 110px;
     border: none;
